--- a/styles/CardList.module.css
+++ b/styles/CardList.module.css
@@ -15,6 +15,7 @@
 .card-item{
     position:relative;
     margin:0;
-    border-radius: 10px;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
