--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -6,7 +6,7 @@
   padding: 10px 20px;
   background-color: var(--gs-bgcolor-one);
   border-bottom: 0.5px solid rgb(41, 51, 62);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -30,11 +30,11 @@
   position: relative;
 }
 
-.geekstack-title{
+.geekstack-title {
   display: flex;
   flex-direction: column;
-  gap:3px;
-  color:var(--gs-fontcolor-one);
+  gap: 3px;
+  color: var(--gs-fontcolor-one);
   font-family: var(--font-type-one);
 }
 
@@ -55,40 +55,25 @@
 
 .username {
   font-weight: 600;
-  color: #222;
+  color: var(--gs-fontcolor-one);
 }
 
 .menu {
   position: absolute;
-  right: 0;
-  margin-top: 8px;
-  background: white;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  border-radius: 6px;
-  padding: 8px 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  z-index: 100;
+  right: 30px;
+  top: 30px;
+  background-color: var(--gs-bgcolor-one);
+  border: var(--gs-border);
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  min-width: 150px;
+  overflow: hidden;
 }
-
-.menu button {
-  background: none;
-  border: none;
-  padding: 8px 10px;
-  cursor: pointer;
-  text-align: left;
-  font-weight: 600;
-  color: #0070f3;
-  border-radius: 4px;
-  transition: background-color 0.2s ease;
+.menuItem:hover {
+  background-color: var(--gs-bgcolor-two);
 }
-
-.menu button:hover {
-  background-color: #e6f0ff;
-}
-
-.login button {
+.loginBtn {
   font-weight: 600;
   padding: 8px 16px;
   cursor: pointer;
@@ -98,8 +83,21 @@
   color: var(--gs-color-primary);
   transition: background-color 0.2s ease;
 }
+.menuItem {
+  display: flex;
+  align-items: center;
+  color: var(--gs-color-secondary);
+  font-size: 14px;
+  gap: 10px;
+  width: 100%;
+  padding: 8px 16px;
+  text-align: left;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
 
-.login button:hover {
+.loginBtn:hover {
   background-color: var(--gs-color-primary);
   color: var(--gs-fontcolor-one);
 }
