--- a/styles/Sidenav.module.css
+++ b/styles/Sidenav.module.css
@@ -3,9 +3,15 @@
   background-color: var(--gs-bgcolor-two);
   color: var(--gs-fontcolor-one);
   transition: width 0.3s ease;
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top:1.5rem;
   box-sizing: border-box;
-  border-right: 0.5px solid rgb(41, 51, 62);
+  position: relative;
+  border-right: 1px solid rgb(41, 51, 62);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .collapsed {
@@ -14,16 +20,47 @@
 
 .toggleBtn {
   background: none;
+  position: absolute;
+  top:10px;
+  right:-20px;
+  z-index: 20;
   border: none;
-  color: inherit;
+  color: var(--gs-color-secondary);
   cursor: pointer;
+  width: 40px;
+  height:40px;
+  border-radius: 25px;
+  
+  background-color: var(--gs-bgcolor-two);
+  border: 1px solid rgb(41,51,62);
+  line-height: 0;
   font-size: 1.2rem;
-  margin-bottom: 1rem;
+}
+
+.toggleBtn:focus{
+  border: 1px solid #7c4fff;
+}
+.toggleBtn:focus-visible{
+    outline: 1px solid #7c4fff !important;
 }
 
 .nav a {
-  display: block;
-  margin: 1rem 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap:5px;  margin: 1rem 0;
   color: inherit;
   text-decoration: none;
+  margin-block-start: 0 !important;
+  transition: justify-content 0.3s smooth;
+}
+.sidenav-collapsed{
+  justify-content: center;
+}
+.nav span{
+  font-size: 14px;
+}
+
+.label-collapsed{
+  display: none;
 }
