--- a/styles/CardList.module.css
+++ b/styles/CardList.module.css
@@ -1,21 +1,32 @@
-.card-list{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    position:relative;
-    gap:10px;
-    padding-top: 20px;
-    padding-bottom:20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    align-items: flex-start;
-    justify-content: center;
+.card-list {
+  box-sizing: border-box;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  gap: 10px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  align-content: flex-start;
+  justify-content: center;
+  min-height: 100px;
+  line-height: 0;
+  overflow-y: auto;
 }
 
-.card-item{
-    position:relative;
-    margin:0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.card-item {
+  position: relative;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
