--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   --gs-bgcolor-three: #26262d;
   --gs-fontcolor-one: #f2f3f8;
   --gs-fontcolor-two: #121212;
+  --gs-fontcolor-three: #9ca3af;
   --gs-bordercolor: rgb(41, 51, 62);
   --gs-border: 1px solid rgb(41, 51, 62);
   --font-type-one: Roboto, sans-serif;
