--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -22,7 +22,6 @@
   border-radius: 9px;
 }
 
-
 .detailsContent {
   display: flex;
   flex-direction: column;
@@ -52,26 +51,25 @@
   bottom: 0;
   left: 0;
   width: calc(100vw - 40px);
-  height: 80vh;
+  height: calc(80vh - 60px);
   background: #26262d;
   z-index: 9999;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow-y: auto;
   padding-left: 20px;
-    padding-right: 20px;
-  padding-bottom: 20px;
-
+  padding-right: 20px;
+  padding-bottom: 40px;
 }
 
-.upper-eff-table{
+.upper-eff-table {
   display: flex;
   flex-direction: row;
-  gap:10px;
+  gap: 10px;
   width: 100%;
 }
 
-.closeBtn{
+.closeBtn {
   width: 100%;
   background-color: var(--gs-color-secondary);
   border: none;
@@ -81,12 +79,12 @@
 }
 
 .puller {
-  width: 40px;          /* width of the bar */
-  height: 4px;          /* thickness */
+  width: 40px; /* width of the bar */
+  height: 4px; /* thickness */
   background-color: #ccc; /* light gray color */
-  border-radius: 2px;   /* rounded edges */
-  margin: 15px auto;    /* spacing + center horizontally */
-  cursor: grab;         /* show grab cursor to indicate draggable */
+  border-radius: 2px; /* rounded edges */
+  margin: 15px auto; /* spacing + center horizontally */
+  cursor: grab; /* show grab cursor to indicate draggable */
 }
 
 /* Add to your TcgImage.module.css */
