--- a/styles/DeckbuildList.module.css
+++ b/styles/DeckbuildList.module.css
@@ -37,7 +37,7 @@
   height: inherit;
   gap: 10px;
   padding: 20px;
-  align-items: flex-start;
+  align-content: flex-start;
   justify-content: center;
 }
 
