--- a/styles/BoosterList.module.css
+++ b/styles/BoosterList.module.css
@@ -59,6 +59,9 @@
   align-items: center; /* Centers text vertically */
   height: auto; /* Let content determine height */
   min-height: 30px; /* Minimum touch target size */
+    font-family: var(--gs-font-family-titillium);
+  font-weight: 600;
+  font-style: var(--gs-font-style);
 }
 
 .selected-category-item {
