--- a/styles/DeckbuilderPage.module.css
+++ b/styles/DeckbuilderPage.module.css
@@ -75,7 +75,6 @@
   display: flex;
   flex-direction: column;
   line-height: 0;
-  overflow: hidden;
   transition: transform 0.3s linear;
 }
 
@@ -123,7 +122,7 @@ hence resulting in a -25px (30px - 5px) so successfully position opening sldier*
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10; /* Make sure this is below your sliding content's z-index but above other content */
+  z-index: 10;
   backdrop-filter: blur(2px);
   transition: opacity 0.3s ease;
 }
