--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -38,10 +38,10 @@
 }
 .backdrop {
   position: fixed;
-  top: 0;
+  top: -600px;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh + 600px);
   background: black;
   z-index: 9997;
 }
@@ -57,6 +57,8 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow-y: auto;
+    scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 40px;
@@ -75,7 +77,7 @@
   border: none;
   margin-top: 10px;
   border-radius: 8px;
-  padding: 4px;
+  padding: 5px;
 }
 
 .puller {
@@ -86,8 +88,6 @@
   margin: 15px auto; /* spacing + center horizontally */
   cursor: grab; /* show grab cursor to indicate draggable */
 }
-
-/* Add to your TcgImage.module.css */
 
 .cookieRunModalContainer {
   position: fixed;
