--- a/styles/PostingStack.module.css
+++ b/styles/PostingStack.module.css
@@ -309,3 +309,8 @@
   color: var(--gs-color-primary);
   opacity: 0.7;
 }
+
+
+.image-selection.selected {
+  border: 2px solid var(--gs-color-primary);
+}
