--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -57,7 +57,8 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow-y: auto;
-    scrollbar-width: none; /* Firefox */
+  touch-action: none;
+  scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE/Edge */
   padding-left: 20px;
   padding-right: 20px;
