Modifed duelmaster tcg effects

--- a/styles/TcgImage.module.css
+++ b/styles/TcgImage.module.css
@@ -71,6 +71,10 @@
   gap: 10px;
   width: 100%;
 }
+.upper-eff-table img{
+  border-radius: 10px;
+  border: var(--gs-border);
+}
 
 .closeBtn {
   width: 100%;
