--- a/styles/DeckbuilderPage.module.css
+++ b/styles/DeckbuilderPage.module.css
@@ -1,7 +1,7 @@
 .pageWrapper {
   display: flex;
   width: 100%;
-  height: calc(100% - - var(--bottom-nav-height) - var(--top-nav-height));
+  height: 100%;
   overflow: hidden;
 }
 
@@ -75,6 +75,7 @@
   display: flex;
   flex-direction: column;
   line-height: 0;
+  overflow: hidden;
   transition: transform 0.3s linear;
 }
 
@@ -91,7 +92,7 @@
 hence resulting in a -25px (30px - 5px) so successfully position opening sldier*/
 .deckbuildListMobile {
   width: 100%;
-  height: calc(100vh - var(--bottom-nav-height) - 25px);
+  height: calc(100vh - var(--bottom-nav-height));
   position: relative;
 }
 
@@ -122,7 +123,7 @@ hence resulting in a -25px (30px - 5px) so successfully position opening sldier*
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10;
+  z-index: 10; 
   backdrop-filter: blur(2px);
   transition: opacity 0.3s ease;
 }
