--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -109,3 +109,48 @@
   background-color: var(--gs-color-primary);
   color: var(--gs-fontcolor-one);
 }
+
+.notificationsDropdown {
+  position: absolute;
+  top: 100%;
+  right: 20px;
+  width: 380px;
+  max-height: 70vh;
+  overflow:hidden;
+  border-radius: 15px;
+  border: var(--gs-border);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+}
+.searchContainer {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.searchInputContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap:5px;
+  background: var(--gs-bgcolor-three);
+  border-radius: 8px;
+  height: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 2px solid var(--gs-bordercolor);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  transition: all 0.2s ease;
+}
+
+.searchInputContainer span{
+  color: var(--gs-fontcolor-three);
+  font-size: 16px;
+}
+.searchIcon {
+  margin-left: 12px;
+  color: var(--gs-fontcolor-three);
+  width: 20px;
+  height: 20px;
+}
