made some minor edits to tcg details for dragonballz

--- a/styles/PostingStack.module.css
+++ b/styles/PostingStack.module.css
@@ -303,6 +303,10 @@
   resize: vertical;
 }
 
+.error-message{
+  color: var(--gs-color-secondary);
+}
+
 /* Placeholder styling */
 .form-input::placeholder,
 .form-textarea::placeholder {
