--- a/styles/DeckbuilderPage.module.css
+++ b/styles/DeckbuilderPage.module.css
@@ -45,7 +45,7 @@
   position: absolute;
   top: calc(50% - 20px);
   left: -20px;
-  z-index: 300;
+  z-index: 12;
   border: none;
   color: var(--gs-color-secondary);
   cursor: pointer;
@@ -75,7 +75,6 @@
   display: flex;
   flex-direction: column;
   line-height: 0;
-  overflow: hidden;
   transition: transform 0.3s linear;
 }
 
@@ -123,7 +122,25 @@ hence resulting in a -25px (30px - 5px) so successfully position opening sldier*
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10; 
+  z-index: 16;
   backdrop-filter: blur(2px);
   transition: opacity 0.3s ease;
+}
+
+.decklistPreview {
+  position: absolute;
+  top: 0;
+  z-index: 17;
+  width: 100%;
+  height: calc(100vh - 600px);
+  transition: transform 0.3s linear;
+}
+
+.showPreview {
+  top: 0;
+  transform: translateY(0);
+}
+.doNotShowPreview {
+  top: 0;
+  transform: translateY(-100%);
 }
