--- a/styles/DeckbuilderBar.module.css
+++ b/styles/DeckbuilderBar.module.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
   gap: 10px;
 }
 .content {
@@ -121,10 +122,10 @@
   transition: all 0.3s ease;
 }
 .decknameinput-mobile input {
-  width: 150px;
+  width: calc(100% - 30px);
 }
 .decknameinput-desktop input {
-  width: 300px;
+  width: calc(100% - 20px);
 }
 
 /* Focus state */
