--- a/styles/DeckbuilderPage.module.css
+++ b/styles/DeckbuilderPage.module.css
@@ -68,7 +68,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  height: 600px;
+  height: 70vh;
   z-index: 1200;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
@@ -132,7 +132,7 @@ hence resulting in a -25px (30px - 5px) so successfully position opening sldier*
   top: 0;
   z-index: 17;
   width: 100%;
-  height: calc(100vh - 600px);
+  height: 30vh; /* 100vh - 70vh from the deckslider*/
   transition: transform 0.3s linear;
 }
 
