--- a/styles/DeckbuilderBar.module.css
+++ b/styles/DeckbuilderBar.module.css
@@ -44,11 +44,12 @@
   display: flex;
   flex-direction: column;
   width: calc(100% - 35px);
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 15px;
+  margin-bottom: 10px;
   padding-left: 30px;
   padding-right: 5px;
 }
+
 .holderTop {
   display: flex;
   flex-direction: row;
